--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Practica Surge</title>
+        <title>Practica surge</title>
     </head>
     <body>
         <h1>Hola soy Daimon Aquino!</h1>
